MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/ADHA_Unit__c.field-meta.xml
<CustomField>
    <fullName>ADHA_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The West Baniyas villa a journey event refers to. Written only by ADHA_JourneyLog, and only for events about a specific villa. Without it the villa exists solely inside the Description text, where no report can group or filter on it, so this is what makes the exploration trail answerable rather than merely readable.</description>
    <inlineHelpText>Set automatically by the West Baniyas microsite. Leave blank on tasks raised anywhere else.</inlineHelpText>
    <label>ADHA Villa</label>
    <referenceTo>ADHA_Unit__c</referenceTo>
    <relationshipLabel>Journey Activities</relationshipLabel>
    <relationshipName>ADHA_Journey_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>