MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Status__c</fullName>
    <label>Appointment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>