MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Created_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created DateTime</label>
    <type>DateTime</type>
</CustomField>