MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/CurrentTaskSLA__c.field-meta.xml
<CustomField>
    <fullName>CurrentTaskSLA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CurrentTaskSLA</label>
    <type>DateTime</type>
</CustomField>