MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/CustomerResponse__c.field-meta.xml
<CustomField>
    <fullName>CustomerResponse__c</fullName>
    <label>Customer Response</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate lead</fullName>
            </value>
            <value>
                <fullName>End of Event</fullName>
            </value>
            <value>
                <fullName>Future Potential</fullName>
            </value>
            <value>
                <fullName>Interest Lost</fullName>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
            </value>
            <value>
                <fullName>Job Seeker</fullName>
            </value>
            <value>
                <fullName>No Number</fullName>
            </value>
            <value>
                <fullName>Switched off</fullName>
            </value>
            <value>
                <fullName>Customer Interested</fullName>
            </value>
            <value>
                <fullName>Lost-Market</fullName>
            </value>
            <value>
                <fullName>Conditions</fullName>
            </value>
            <value>
                <fullName>Lost-Secondary Market</fullName>
            </value>
            <value>
                <fullName>Lost-Availability</fullName>
            </value>
            <value>
                <fullName>Lost-Dealing Broker</fullName>
            </value>
            <value>
                <fullName>Lost-Dealing with colleague</fullName>
            </value>
            <value>
                <fullName>Lost-Future potential</fullName>
            </value>
            <value>
                <fullName>Lost-Payment Plan</fullName>
            </value>
            <value>
                <fullName>Lost-Price</fullName>
            </value>
            <value>
                <fullName>Lost-Uncontactable</fullName>
            </value>
            <value>
                <fullName>Lost-Unit layout</fullName>
            </value>
            <value>
                <fullName>Lost-Unit View</fullName>
            </value>
            <value>
                <fullName>Lost-Affordability</fullName>
            </value>
            <value>
                <fullName>Lost-New Sales Enquiry</fullName>
            </value>
            <value>
                <fullName>Lost-Project Locations</fullName>
            </value>
            <value>
                <fullName>Lost-Inter Department Referra</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Requested Callback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>