MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/D_T_Customer_Discussion_Outcome__c.field-meta.xml
<CustomField>
    <fullName>D_T_Customer_Discussion_Outcome__c</fullName>
    <label>D&amp;T Customer Discussion Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation Process</fullName>
            </value>
            <value>
                <fullName>Consolidation</fullName>
            </value>
            <value>
                <fullName>Conditional Cancellation</fullName>
            </value>
            <value>
                <fullName>Cancellation with</fullName>
            </value>
            <value>
                <fullName>Refund, Cancellation</fullName>
            </value>
            <value>
                <fullName>Without Refund</fullName>
            </value>
            <value>
                <fullName>Property Transfer</fullName>
            </value>
            <value>
                <fullName>Payment Extension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>