MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <formula>IF(
ISBLANK(ServiceAction__r.Email_Template_Name__c),
NULL,
ServiceAction__r.Email_Template_Name__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Template Name</label>
    <type>Text</type>
</CustomField>