MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/EOI_Site_Activity_Key__c.field-meta.xml
<CustomField>
    <fullName>EOI_Site_Activity_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>EOI microsite activity diary: idempotency key of the flushed batch (registration id + batch key). Set only on activity Tasks written by EoiSiteActivityService; a retried flush upserts on it instead of creating a second Task. Author: Aurelix.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Set by the EOI microsite activity diary. Do not edit.</inlineHelpText>
    <label>EOI Site Activity Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>