MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/EOI_Site_Registration__c.field-meta.xml
<CustomField>
    <fullName>EOI_Site_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOI Site Registration</label>
    <referenceTo>EOI_Public_Registration__c</referenceTo>
    <relationshipLabel>Site Activities</relationshipLabel>
    <relationshipName>Site_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>