MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/EOI_Site_Source__c.field-meta.xml
<CustomField>
    <fullName>EOI_Site_Source__c</fullName>
    <label>EOI Site Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wadeem Microsite</fullName>
            </value>
            <value>
                <fullName>ADIB Microsite</fullName>
            </value>
            <value>
                <fullName>Public Microsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>