MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/Escalation_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Escalation_2_Email__c</fullName>
    <formula>IF(
ISBLANK(ServiceAction__r.Escalation_2_Name__c),
NULL,
ServiceAction__r.Escalation_2_Name__r.Email
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation 2 Email</label>
    <type>Text</type>
</CustomField>