MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/Escalation_2_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalation_2_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Escalation 2 Time</label>
    <type>DateTime</type>
</CustomField>