MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/Escalation_3_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalation_3_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Escalation 3 Time</label>
    <type>DateTime</type>
</CustomField>