MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/is_Decision_Type__c.field-meta.xml
<CustomField>
    <fullName>is_Decision_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Decision Type</label>
    <type>Checkbox</type>
</CustomField>