MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/is_Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>is_Documents_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Documents Required</label>
    <type>Checkbox</type>
</CustomField>