MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/IsSLAExpired__c.field-meta.xml
<CustomField>
    <fullName>IsSLAExpired__c</fullName>
    <formula>CurrentTaskSLA__c &lt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsSLAExpired</label>
    <type>Checkbox</type>
</CustomField>