MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/NextTaskInitiationSLA__c.field-meta.xml
<CustomField>
    <fullName>NextTaskInitiationSLA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NextTaskInitiationSLA</label>
    <type>DateTime</type>
</CustomField>