MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/NextTaskMilestone__c.field-meta.xml
<CustomField>
    <fullName>NextTaskMilestone__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NextTaskMilestone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>