MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/No_of_Times_SLA_Expired__c.field-meta.xml
<CustomField>
    <fullName>No_of_Times_SLA_Expired__c</fullName>
    <label>No of Times SLA Expired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>