MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/NOC_Doc_Status__c.field-meta.xml
<CustomField>
    <fullName>NOC_Doc_Status__c</fullName>
    <label>NOC Doc Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel NOC</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Title Deed Issued</fullName>
            </value>
            <value>
                <fullName>Extend NOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>