MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/ortoo_qra__Activity_Assigned_From_Queue__c.field-meta.xml
<CustomField>
    <fullName>ortoo_qra__Activity_Assigned_From_Queue__c</fullName>
    <description>Assigned from queue</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned From Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>