MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/ortoo_qra__Activity_Q_assign_Last_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>ortoo_qra__Activity_Q_assign_Last_Assigned_Date__c</fullName>
    <description>Q-assign last assigned date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Q-assign Last Assigned Date</label>
    <type>DateTime</type>
</CustomField>