MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/ortoo_qra__Activity_Reviewed_Days__c.field-meta.xml
<CustomField>
    <fullName>ortoo_qra__Activity_Reviewed_Days__c</fullName>
    <formula>LastModifiedDate - ortoo_qra__Activity_Q_assign_Last_Assigned_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q-assign Reviewed Days</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>