MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <label>Reminder Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reminder 1 Sent</fullName>
            </value>
            <value>
                <fullName>Reminder 2 Sent</fullName>
            </value>
            <value>
                <fullName>Reminder 3 Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>