MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/Requested_From__c.field-meta.xml
<CustomField>
    <fullName>Requested_From__c</fullName>
    <label>Requested From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Req from Owner</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>