MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/RetiredReason__c.field-meta.xml
<CustomField>
    <fullName>RetiredReason__c</fullName>
    <label>Retired Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Payment plan</fullName>
            </value>
            <value>
                <fullName>Unit Location</fullName>
            </value>
            <value>
                <fullName>Unit Type</fullName>
            </value>
            <value>
                <fullName>Track Record</fullName>
            </value>
            <value>
                <fullName>Duplicate lead</fullName>
                <isActive>false</isActive>
                <label>Duplicate lead</label>
            </value>
            <value>
                <fullName>End of Event</fullName>
                <isActive>false</isActive>
                <label>End of Event</label>
            </value>
            <value>
                <fullName>Future Potential</fullName>
                <isActive>false</isActive>
                <label>Future Potential</label>
            </value>
            <value>
                <fullName>Interest Lost</fullName>
                <isActive>false</isActive>
                <label>Interest Lost</label>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
                <isActive>false</isActive>
                <label>Invalid Number</label>
            </value>
            <value>
                <fullName>Irrelevant Number</fullName>
                <isActive>false</isActive>
                <label>Irrelevant Number</label>
            </value>
            <value>
                <fullName>Job Seeker</fullName>
                <isActive>false</isActive>
                <label>Job Seeker</label>
            </value>
            <value>
                <fullName>No Answer</fullName>
                <isActive>false</isActive>
                <label>No Answer</label>
            </value>
            <value>
                <fullName>No Number</fullName>
                <isActive>false</isActive>
                <label>No Number</label>
            </value>
            <value>
                <fullName>No Purchase Interest</fullName>
                <isActive>false</isActive>
                <label>No Purchase Interest</label>
            </value>
            <value>
                <fullName>No Real Potential</fullName>
                <isActive>false</isActive>
                <label>No Real Potential</label>
            </value>
            <value>
                <fullName>Non-Sale Enquiry</fullName>
                <isActive>false</isActive>
                <label>Non-Sale Enquiry</label>
            </value>
            <value>
                <fullName>Non-UAE National</fullName>
                <isActive>false</isActive>
                <label>Non-UAE National</label>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
                <isActive>false</isActive>
                <label>Not Qualified</label>
            </value>
            <value>
                <fullName>Retired</fullName>
                <isActive>false</isActive>
                <label>Retired</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>