MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/Send_Customer_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Customer_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Customer Notification</label>
    <type>Checkbox</type>
</CustomField>