MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/ServiceAction__c.field-meta.xml
<CustomField>
    <fullName>ServiceAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Action</label>
    <referenceTo>ServiceAction__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>