MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/SkipValidation__c.field-meta.xml
<CustomField>
    <fullName>SkipValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SkipValidation</label>
    <type>Checkbox</type>
</CustomField>