MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/SRType__c.field-meta.xml
<CustomField>
    <fullName>SRType__c</fullName>
    <formula>ServiceAction__r.ServiceCatalog__r.Name</formula>
    <label>SR Type</label>
    <type>Text</type>
</CustomField>