MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/System_Created__c.field-meta.xml
<CustomField>
    <fullName>System_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be auto checked if the activity is created by the system.</description>
    <inlineHelpText>This will be auto checked if the activity is created by the system.</inlineHelpText>
    <label>System Created</label>
    <type>Checkbox</type>
</CustomField>