MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/Verify_Documents__c.field-meta.xml
<CustomField>
    <fullName>Verify_Documents__c</fullName>
    <label>Verify Documents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required More Docs</fullName>
            </value>
            <value>
                <fullName>Verified All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>