MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/ZiwoCTI__Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>ZiwoCTI__Call_Disposition__c</fullName>
    <label>Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
            <value>
                <fullName>Test3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>