MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/ZiwoCTI__Call_ID__c.field-meta.xml
<CustomField>
    <fullName>ZiwoCTI__Call_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>