MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/ZiwoCTI__Call_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>ZiwoCTI__Call_Recording_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Recording URL</label>
    <type>Url</type>
</CustomField>