MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/ZiwoCTI__Call_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ZiwoCTI__Call_Start_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Start Date/Time</label>
    <type>DateTime</type>
</CustomField>