MODON MRE BPDEV/force-app/main/default/objects/Activity/fields/ZiwoCTI__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>ZiwoCTI__Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>